--- a/FirstMVCApp/FirstMVCApp/Views/Products/Index.cshtml
+++ b/FirstMVCApp/FirstMVCApp/Views/Products/Index.cshtml
@@ -19,10 +19,13 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ImageUrl)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                @Html.DisplayNameFor(model => model.Category)
             </th>
             <th></th>
         </tr>
@@ -37,11 +40,14 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.ImageUrl)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ImageUrl)
-                </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Category.Name)
+            </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
