--- a/RolesApp/RolesApp/Views/Home/Privacy.cshtml
+++ b/RolesApp/RolesApp/Views/Home/Privacy.cshtml
@@ -4,3 +4,26 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+
+<h2> @ViewData["Color"] </h2>
+
+
+<form method="post">
+
+    <select name="sel">
+        <option value="red">red</option>
+        <option value="yellow"> yellow</option>
+        <option value="green">green</option>
+    </select>
+
+    <select name="product">
+        <option value="1">Product 1</option>
+        <option value="2">Product 2</option>
+        <option value="3">Product 3</option>
+    </select>
+
+     <input value="отправить" type="submit"/>
+</form>
+
+
