input datetime cookie

--- a/RolesApp/RolesApp/Views/Home/Privacy.cshtml
+++ b/RolesApp/RolesApp/Views/Home/Privacy.cshtml
@@ -16,14 +16,18 @@
         <option value="yellow"> yellow</option>
         <option value="green">green</option>
     </select>
-
+    <br />
     <select name="product">
         <option value="1">Product 1</option>
         <option value="2">Product 2</option>
         <option value="3">Product 3</option>
     </select>
 
-     <input value="отправить" type="submit"/>
+    <br/>
+
+    <input type="datetime-local" name="date1" value="@ViewData["Date"]"/>
+    <br />
+    <input value="отправить" type="submit"/>
 </form>
 
 
